--- a/src/app/pages/user-selection/user-selection.component.html
+++ b/src/app/pages/user-selection/user-selection.component.html
@@ -1,15 +1,15 @@
 <div class="user-selection-container">
   <h2>¿Quién eres?</h2> <div class="profiles-grid">
-    <div class="profile-diamond-wrapper" *ngFor="let profile of profiles">
-      <div class="profile-diamond"
+    <div class="profile-box-wrapper" *ngFor="let profile of profiles">
+      <div class="profile-box"
           (click)="selectProfile(profile)"
-          [style.background-image]="'url(assets/img/' + profile.imageUrl + ')'" title="Seleccionar {{ profile.name }}">
+          [style.background-image]="'url(assets/' + profile.imageUrl + ')'" title="Seleccionar {{ profile.name }}">
         <span class="profile-name">{{ profile.name }}</span>
       </div>
     </div>
 
     <div class="profile-diamond-wrapper">
-      <div class="profile-diamond add-profile"
+      <div class="profile-box add-profile"
           (click)="createProfile()"
           title="Crear Nuevo Perfil">
         <span class="add-icon">+</span>
